[package]
name = "apic-fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# luisa_compute = { git= "https://github.com/LuisaGroup/luisa-compute-rs.git"}
luisa_compute = { path= "../luisa-compute-rs/luisa_compute"}
image = "*"
exr = "1.5.2"
rand = {version = "0.8.5", features = ["std_rng"]}
log = "0.4.8"
indicatif = "0.17.2"
lazy_static = "1.4.0"
rayon = "1.6.0"
parking_lot = "0.12.1"
libloading = "0.7.4"


[build-dependencies]
cmake = "0.1.50"

[[bin]]
name = "fluid"
path = "src/bin/fluid.rs"

