[package]
edition = "2021"
name = "apic-fluid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luisa_compute = {git = "https://github.com/LuisaGroup/luisa-compute-rs.git", branch = "next"}
# luisa_compute = { path= "../luisa-compute-rs/luisa_compute"}
exr = "1.5.2"
image = "*"
indicatif = "0.17.2"
lazy_static = "1.4.0"
libloading = "0.7.4"
log = "0.4.8"
parking_lot = "0.12.1"
rand = {version = "0.8.5", features = ["std_rng"]}
rayon = "1.6.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
bson = "2.6.1"

[build-dependencies]
cmake = "0.1.50"

[[bin]]
name = "fluid"
path = "src/bin/fluid.rs"



[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[[bin]]
name = "recon"
path = "src/bin/recon.rs"
